--- a/server_market/package.json
+++ b/server_market/package.json
@@ -23,6 +23,7 @@
       "multer": "^1.4.5-lts.1",
       "multer-storage-cloudinary": "^4.0.0",
       "nodemon": "^3.0.1",
-      "package": "^1.0.1"
+      "package": "^1.0.1",
+      "short-mongo-id": "^0.1.1"
    }
 }
